[gd_scene load_steps=2 format=3 uid="uid://dgamdwdlcwo4c"]

[ext_resource type="Script" path="res://unit/enemies/spawner.gd" id="1_87q1l"]

[node name="Spawner" type="Polygon2D"]
color = Color(0, 1, 1, 0.392157)
polygon = PackedVector2Array(0, 0, 0, -56, 1280, -56, 1280, 0)
script = ExtResource("1_87q1l")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="SpawnWaveTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="SpawnWaveTimer" to="." method="_on_spawn_wave_timer_timeout"]
